--- a/PsyduckLifeAndroid/app/src/main/res/layout/activity_running.xml
+++ b/PsyduckLifeAndroid/app/src/main/res/layout/activity_running.xml
@@ -95,7 +95,8 @@
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:background="@drawable/directionsboxwater"
-        android:text="@string/DirectionsRunning"
+        android:onClick="startGame"
+        android:text="@string/DirectionsRunningStart"
         android:textAlignment="center"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,12 +109,25 @@
         android:layout_width="300dp"
         android:layout_height="200dp"
         android:background="@drawable/directionsboxwater"
-        android:text="@string/DirectionsRunning"
+        android:onClick="returnScreen"
+        android:text="@string/DirectionsRunningEnd"
         android:textAlignment="center"
         android:textStyle="bold|italic"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="584dp"
+        android:layout_marginTop="4dp"
+        android:onClick="endGame"
+        android:text="I Died"
+        android:textSize="10sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
