--- a/PsyduckLifeAndroid/app/src/main/res/layout/activity_swimming.xml
+++ b/PsyduckLifeAndroid/app/src/main/res/layout/activity_swimming.xml
@@ -85,7 +85,7 @@
 
     <ImageView
         android:id="@+id/graveler1Swimming"
-        android:layout_width="92dp"
+        android:layout_width="match_parent"
         android:layout_height="57dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -97,7 +97,7 @@
 
     <ImageView
         android:id="@+id/graveler2Swimming"
-        android:layout_width="92dp"
+        android:layout_width="match_parent"
         android:layout_height="57dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +112,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:layout_marginEnd="68dp"
+        android:layout_marginEnd="640dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -126,6 +126,32 @@
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/instructionsEndSwimming"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
+        android:background="@drawable/directionsboxwater"
+        android:onClick="returnScreen"
+        android:text="@string/DirectionsRunningEnd"
+        android:textAlignment="center"
+        android:textStyle="bold|italic"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="584dp"
+        android:layout_marginTop="4dp"
+        android:onClick="endGame"
+        android:text="I died "
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
